--- a/templates/apple_stock/model_capacity_colors_trend.html
+++ b/templates/apple_stock/model_capacity_colors_trend.html
@@ -342,7 +342,7 @@
     const LINE_DASH = {solid: [], dash: [6, 4], dot: [2, 3], dashdot: [6, 4, 2, 3]};
     const LINE_PALETTE = [
         {#"#DD1133",　　/* ========= 買取商店 ========= */#}
-        {#"#DD1133",　　/* ========= 海峡通信 ========= */#}
+        "#478CD8",　　/* ========= 海峡通信 ========= */
         "#B41524",　　/* ========= 買取１丁目ーshop3 ========= */
         {#"#DD1133",　/* ========= モバイルミックス ========= */#}
         "#278C46",　　/* ========= 森森買取-shop5 ========= */
