--- a/templates/apple_stock/model_capacity_colors_trend.html
+++ b/templates/apple_stock/model_capacity_colors_trend.html
@@ -352,16 +352,16 @@
     const LINE_PALETTE = [
         {#"#DD1133",　　/* ========= 買取商店 ========= */#}
         "#478CD8",　　/* ========= 海峡通信 ========= */
-        "#B41524",　　/* ========= 買取１丁目ーshop3 ========= */
-        {#"#DD1133",　/* ========= モバイルミックス ========= */#}
-        "#278C46",　　/* ========= 森森買取-shop5 ========= */
-        "#2DA9E8",　　/* ========= 買取ルデヤ-shop6 ========= */
-        "#E71534",　　/* ========= 買取Wiki-shop7 ========= */
-        "#F27474",　　/* ========= 買取ホムラ=shop8 ========= */
-        "#3952A6",　　/* ========= ドラゴンモバイル-shop9 ========= */
-        "#E60012",　　/* ========= モバステ-shop10 ========= */
-        "#20AECC",　　/* ========= アキモバ-shop11 ========= */
-        "#0EC7D9",　　/* ========= トゥインクル-shop12 ========= */
+        "#B41524",　　/* ========= 買取１丁目 ========= */
+        "#DD1133",　/* ========= モバイルミックス ========= */
+        "#278C46",　　/* ========= 森森買取 ========= */
+        "#2DA9E8",　　/* ========= 買取ルデヤ========= */
+        "#E71534",　　/* ========= 買取Wiki========= */
+        "#F27474",　　/* ========= 買取ホムラ ========= */
+        "#3952A6",　　/* ========= ドラゴンモバイル- ========= */
+        "#E60012",　　/* ========= モバステ- ========= */
+        "#20AECC",　　/* ========= アキモバ- ========= */
+        {#"#0EC7D9",　　/* ========= トゥインクル ========= */#}
         "#FFF100",　　/* ========= 家電市場-shop13 ========= */
         "#DA7C66",　　/* ========= 買取楽園-shop14 ========= */
         "#1C4473",　　/* ========= 買取当番-shop15 ========= */
