--- a/templates/apple_stock/model_capacity_colors_trend.html
+++ b/templates/apple_stock/model_capacity_colors_trend.html
@@ -361,7 +361,7 @@
         "#3952A6",　　/* ========= ドラゴンモバイル- ========= */
         "#E60012",　　/* ========= モバステ- ========= */
         "#20AECC",　　/* ========= アキモバ- ========= */
-        {#"#0EC7D9",　　/* ========= トゥインクル ========= */#}
+        "#0EC7D9",　　/* ========= トゥインクル ========= */
         "#FFF100",　　/* ========= 家電市場-shop13 ========= */
         "#DA7C66",　　/* ========= 買取楽園-shop14 ========= */
         "#1C4473",　　/* ========= 買取当番-shop15 ========= */
